--- a/JSON Utility Plugin.csproj
+++ b/JSON Utility Plugin.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Reference Include="Macro Deck 2">
-      <HintPath>..\Macro Deck 2.dll</HintPath>
+      <HintPath>C:\Program Files\Macro Deck\Macro Deck 2.dll</HintPath>
     </Reference>
   </ItemGroup>
 
